# Xycles

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  run.sh
Source/: AudioRecorder.cpp  AudioRecorder.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TopBarComponent.cpp  TopBarComponent.h  TrackComponent.cpp  TrackComponent.h  TrackEditor.h  TrackKnob.cpp  TrackKnob.h  TrackSlider.cpp  TrackSlider.h
Source/base/: EffectComponent.cpp  EffectComponent.h
Source/effects/: Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  EffectRack.cpp  EffectRack.h  Granulator.cpp  Granulator.h  Reverb.cpp  Reverb.h
Source/static/: Utilities.h
Source/subcomponents/: AudioButton.h  PlayButton.h  PowerButton.h  RecordButton.h  StopButton.h  ThemeButton.h
Source/topbar/: RecordingIndicator.cpp  RecordingIndicator.h  TopBarComponent.cpp  TopBarComponent.h
Source/track/: TrackComponent.cpp  TrackComponent.h  TrackEditor.cpp  TrackEditor.h  TrackKnob.cpp  TrackKnob.h  TrackSlider.cpp  TrackSlider.h
rust_part/: CMakeLists.txt  Cargo.toml  build.rs
rust_part/.cargo/: config.toml
rust_part/src/: engine.rs  lib.rs
rust_part/src/track/: grain.rs  mod.rs  play_head.rs
