[package]
name = "rust_part"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
crossbeam-queue = "0.3.12"
cxx = "1.0.158"
rodio = "0.20.1"
freeverb = "0.1.0"
aych-delay = { git = "https://github.com/yaboypax/aych-delay", branch = "realtime-process"}

[build-dependencies]
cxx-build = "1.0.158"
